Fix linebreak in empty para node

--- a/linebreak.css
+++ b/linebreak.css
@@ -1,6 +1,10 @@
+.fluor-editor_editor--linebreak>div {
+    position: relative;
+}
 .fluor-editor_editor--linebreak>div::after {
     content: " ";
     position: absolute;
+    bottom: 0;
     margin-left: 1px;
     background-image: url(linebreak.svg);
     background-repeat: no-repeat;
